# fist_emphatic_message_generator

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md
src/: COPYING  INSTALL  Makefile.in  README  check_master.txt  config.h.in  configure  configure.in  fist.1  fist.c  fist.w  fist_sample.w
webtree/: index.html
