dnl Process this file with autoconf to produce a configure script.

AC_INIT(fist.w)
AC_CONFIG_HEADER(config.h)
AC_PREFIX_DEFAULT(/usr/local)

PRODUCT=fist
VERSION=4.1
AC_DEFINE_UNQUOTED(PRODUCT, "$PRODUCT")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_SUBST(PRODUCT)
AC_SUBST(VERSION)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_CHECK_PROGS(PAGER, "less")
AC_CHECK_PROGS(PAGER, "more")
AC_CHECK_PROGS(PAGER, "cat")

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h string.h strings.h stdlib.h)

dnl Checks for typedefs, structures, and compiler characteristics.

AC_OUTPUT(Makefile)
